# sbt-fizzer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  bootstrap.py  build.py  build.sh  gitpull.py
code/: CMakeLists.txt
code/asio/: CMakeLists.txt
code/asio/src/: server.cpp
code/benchmarks/: CMakeLists.txt
code/benchmarks/src/: benchmarks.cpp  bool_flag_one_and_two.cpp  c_string_count_chars.cpp  c_string_parse_two_ints.cpp  float_if_x_eq_c.cpp  int16_equal.cpp  int16_if_parabola.cpp  int16_if_x_equal_c.cpp  int16_if_x_equal_y_c.cpp  int16_if_x_ge_c.cpp  int16_if_x_lt_c.cpp  int16_if_x_xor_a_eq_b.cpp  int16_less.cpp  int32_ackermann.cpp  int32_if_parabola.cpp  int32_if_x_equal_c.cpp  int32_if_x_equal_y_c.cpp  int32_if_x_ge_c.cpp  int32_if_x_lt_c.cpp  int32_if_x_xor_a_eq_b.cpp  int32_logical_or_two_vars.cpp  int8_if_hash_x_y_z_eq_c.cpp  int8_if_x_equal_c.cpp  int8_if_x_equal_y_c.cpp  int8_if_x_ge_c.cpp  int8_if_x_lt_c.cpp  int8_if_x_xor_a_eq_b.cpp  nested_ifs.cpp  uint16_if_parabola.cpp  uint32_if_parabola.cpp
code/client/: CMakeLists.txt
code/client/src/: main.cpp  run.cpp
code/connection/: CMakeLists.txt
code/connection/src/: client.cpp  client_executor.cpp  client_main.cpp  connection.cpp  medium.cpp  server.cpp  server_main.cpp  session.cpp
code/fuzzhamm/src/: branching_fuzzer_extended_descent.cpp  execution_trace_utils_classification.cpp  execution_trace_utils_create_fuzzer.cpp  execution_trace_utils_did.cpp  execution_trace_utils_histogram.cpp  execution_trace_utils_iid.cpp  fuzzer.cpp  iid_fuzzer_base.cpp  iid_fuzzer_improve_branching_directions.cpp  sensitivity_fuzzer_base.cpp  sensitivity_fuzzer_hamming.cpp  sensitivity_fuzzer_progress_check.cpp  sensitivity_fuzzer_sequence.cpp  sensitivity_fuzzer_similar_trace_search.cpp
code/fuzzing/: CMakeLists.txt
code/fuzzing/src/: dump.cpp  dump_testcomp.cpp  fuzzer_base.cpp  fuzzer_dummy.cpp  fuzzing_loop.cpp  fuzzing_run.cpp
code/instrumentation/: CMakeLists.txt
code/instrumentation/src/: instrumentation.cpp  instrumentation_types.cpp  verifier_functions.cpp
code/iomodels/: CMakeLists.txt
code/iomodels/src/: instrumentation_callbacks.cpp  iomanager.cpp  stdin_replay_bits_then_repeat_85.cpp  stdout_void.cpp
code/pass/: CMakeLists.txt
code/pass/src/: FizzerPass.cpp  SBT-FizzerPass.cpp
code/tools/: CMakeLists.txt
code/tools/client/: CMakeLists.txt  client_options.cpp  client_options.hpp  main.cpp  program_info.cpp  program_info.hpp  program_options.cpp  run.cpp
code/tools/fizz/: CMakeLists.txt  main.cpp  program_info.cpp  program_info.hpp  program_options.cpp  run.cpp  test.cpp
code/tools/fizzer/: CMakeLists.txt  fizzer.py  fizzer.py.in
code/tools/server/: main.cpp  program_info.cpp  program_options.cpp  program_options.hpp  run.cpp
code/tools/utils/: CMakeLists.txt  fizzer.py  fizzer_build_client.py  fizzer_instrument.py  sbt-fizzer.py  sbt-fizzer_build_client.py  sbt-fizzer_instrument.py
code/utility/: CMakeLists.txt
code/utility/src/: bit_count.cpp  bits_reference.cpp  checked_number_operations.cpp  fail_message.cpp  program_options_base.cpp  random.cpp
src/: CMakeLists.txt
src/connection/: CMakeLists.txt
src/connection/src/: benchmark_executor.cpp  client.cpp  client_configuration.cpp  client_executor.cpp  connection.cpp  kleeient.cpp  kleeient_connector.cpp  message.cpp  server.cpp  shared_memory.cpp  target_executor.cpp
src/fuzzhamm/: CMakeLists.txt
src/fuzzhamm/src/: branching_fuzzer_base.cpp  branching_fuzzer_extended_descent.cpp  branching_fuzzer_sequence.cpp  execution_trace.cpp  execution_trace_utils_did.cpp  execution_trace_utils_indices_hitcounts.cpp  execution_trace_utils_sensitive_bits.cpp  execution_trace_utils_to_json.cpp  sensitivity_fuzzer_base.cpp  sensitivity_fuzzer_progress_check.cpp  sensitivity_fuzzer_similar_trace_search.cpp
src/fuzzing/: CMakeLists.txt
src/fuzzing/src/: analysis_statistics.cpp  bitflip_analysis.cpp  bitshare_analysis.cpp  branching_node.cpp  chain_minimization_analysis.cpp  dump.cpp  dump_native.cpp  dump_testcomp.cpp  dump_tree.cpp  execution_record_writer.cpp  execution_trace.cpp  fuzzer.cpp  fuzzer_base.cpp  fuzzers_map.cpp  fuzzing_loop.cpp  fuzzing_run.cpp  gradient_descent.cpp  gradient_descent_with_convergence.cpp  iid_node_dependencies.cpp  iid_vector_analysis.cpp  input_flow_analysis.cpp  jetklee.cpp  jetklee_analysis.cpp  klee.cpp  local_search_analysis.cpp  minimization_analysis.cpp  number_overlay.cpp  optimizer.cpp  progress_recorder.cpp  renderer.cpp  sensitivity_analysis.cpp  sensitivity_flow_analysis.cpp  special_values_analysis.cpp  stdin_bits.cpp  typed_minimization_analysis.cpp
src/instrumentation/: CMakeLists.txt
src/instrumentation/src/: fuzz_target.cpp  instrumentation.cpp  instrumentation_types.cpp  main.cpp  verifier_functions.cpp
src/iomodels/: CMakeLists.txt
src/iomodels/src/: configuration.cpp  instrumentation_callbacks.cpp  iomanager.cpp  models_map.cpp  stdin_replay_bits_then_repeat_85.cpp  stdin_replay_bits_then_repeat_zero.cpp  stdin_replay_bytes_then_repeat_byte.cpp  stdout_void.cpp
src/klee_fuzzer/: CMakeLists.txt
src/klee_fuzzer/src/: fuzzer.cpp
src/pass/: CMakeLists.txt
src/pass/src/: SBT-FizzerPass.cpp
src/tools/: CMakeLists.txt
src/tools/client/: CMakeLists.txt  main.cpp  program_options.cpp  program_options.hpp  run.cpp
src/tools/instrumenter/: CMakeLists.txt  llvm_instrumenter.cpp  llvm_instrumenter.hpp  main.cpp  program_info.cpp  program_info.hpp  program_options.cpp  program_options.hpp  run.cpp
src/tools/kleeient/: CMakeLists.txt  main.cpp  program_info.cpp  program_info.hpp  program_options.cpp  run_kleeient.cpp
src/tools/runner/: CMakeLists.txt  README.md  sbt-fizzer.py
src/tools/server/: CMakeLists.txt  main.cpp  program_info.cpp  program_info.hpp  program_options.cpp  program_options.hpp  run.cpp
src/tools/utils/: CMakeLists.txt  sbt-fizzer.py  sbt-fizzer_build_client.py  sbt-fizzer_build_target.py  sbt-fizzer_instrument.py
src/utility/: CMakeLists.txt
src/utility/src/: log.cpp  math.cpp  program_options_base.cpp  (+3 more)
(+345 files in other folders)
