set(THIS_TARGET_NAME asio_server)

add_executable(${THIS_TARGET_NAME}
    ./src/server.cpp
    )

target_link_libraries(${THIS_TARGET_NAME} ${BOOST_LIST_OF_LIBRARIES_TO_LINK_WITH})

set_target_properties(${THIS_TARGET_NAME} PROPERTIES
    DEBUG_OUTPUT_NAME "${THIS_TARGET_NAME}_${CMAKE_SYSTEM_NAME}_Debug"
    RELEASE_OUTPUT_NAME "${THIS_TARGET_NAME}_${CMAKE_SYSTEM_NAME}_Release"
    RELWITHDEBINFO_OUTPUT_NAME "${THIS_TARGET_NAME}_${CMAKE_SYSTEM_NAME}_RelWithDebInfo"
    )

install(TARGETS ${THIS_TARGET_NAME} DESTINATION "lib")
